# citibike-markov

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebooks/: continuous-time.ipynb  discrete-time.ipynb  eda.ipynb
outputs/: flow_ratio.npy  pi_by_hour.npy  stations.json
src/: discrete_pipeline.py  download_data.py  pipeline.py
tests/integration/: test_outputs.py
tests/unit/: test_download_functions.py  test_pipeline_functions.py
