[project]
name = "citibike-markov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "dash-leaflet>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "pydeck>=0.9.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pytest>=9.0.2",
]
